fixed diplay overflow of numbers

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(209, 209, 209);
+  background-color: rgb(236, 236, 236);
 }
 
 code {
