--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,5 +1,5 @@
 button {
-    background-color: #b6b6b6;
+    background-color: #c7c5c5;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
