--- a/src/styles/Display.css
+++ b/src/styles/Display.css
@@ -1,6 +1,6 @@
 .display {
     height: 100px;
-    width: 100%;
+    max-width: 400px;
     padding: 0 10px;
     margin-bottom: 10px;
     background-color: rgb(35, 35, 88);
@@ -12,4 +12,5 @@
     font-size: 60px;
     font-weight: bold;
     box-sizing: border-box;
+    overflow-x: auto;
 }
