--- a/src/styles/Wrapper.css
+++ b/src/styles/Wrapper.css
@@ -3,5 +3,5 @@
     height: 600px;
     padding: 10px;
     border-radius: 5px;
-    background-color: rgb(117, 117, 117);
+    background-color: rgb(139, 139, 139);
 }
